--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,11 @@
 	</head>
 	<body>
 		<div id="content"></div>
+		<div id="playAgainPopup" class="popup">
+			<div class="popup-content">
+				<p>Game Over! Do you want to play again?</p>
+				<button id="playAgainButton">Play Again</button>
+			</div>
+		</div>
 	</body>
 </html>
